[gd_scene load_steps=20 format=2]

[ext_resource path="res://src/levels/Menu.gd" type="Script" id=1]
[ext_resource path="res://Menu+GM/7eaac6bdd74453be0b9d62199fde2d6c.jpg" type="Texture" id=2]
[ext_resource path="res://Menu+GM/menu.bg.png" type="Texture" id=3]
[ext_resource path="res://Fonts/ArchitectsDaughter.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Menu+GM/Game_title.png" type="Texture" id=5]
[ext_resource path="res://src/Objects/Wind.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Objects/!!.tscn" type="PackedScene" id=7]
[ext_resource path="res://Music/chime-sound-7143.mp3" type="AudioStream" id=8]
[ext_resource path="res://src/levels/bg_scene.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=10]
size = 39
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 23
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.686275, 0.443137, 0.776471, 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.815686, 0.72549, 0.917647, 1 )
border_color = Color( 0.717647, 0.0470588, 0.694118, 1 )

[sub_resource type="DynamicFont" id=8]
size = 23
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.905882, 0.721569, 0.721569, 1 )
border_color = Color( 0.831373, 0.619608, 0.619608, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.823529, 0.823529, 1 )

[sub_resource type="DynamicFont" id=9]
size = 23
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.580392, 0.631373, 0.901961, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.690196, 0.733333, 0.964706, 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
script = ExtResource( 1 )

[node name="Wind" parent="." instance=ExtResource( 6 )]
position = Vector2( -493, 15 )

[node name="!!" parent="Wind" instance=ExtResource( 7 )]
position = Vector2( 462, -8 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 280.0
margin_top = 122.0
margin_right = 719.0
margin_bottom = 211.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.933333, 0.807843, 0.941176, 1 )
custom_colors/font_color_shadow = Color( 0.929412, 0.745098, 0.745098, 1 )
custom_fonts/font = SubResource( 10 )
text = " Dummies' Journey "

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = 375.0
margin_top = 140.0
margin_right = 709.0
margin_bottom = 198.0
color = Color( 0.972549, 0.835294, 1, 1 )

[node name="VBoxContainer1" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -93.0
margin_top = -4.0
margin_right = 107.0
margin_bottom = 42.0
grow_vertical = 2
custom_constants/separation = 30

[node name="Start Button" type="Button" parent="VBoxContainer1"]
margin_right = 200.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 4 )
custom_styles/normal = SubResource( 1 )
shortcut_in_tooltip = false
text = "Start  <3"

[node name="Map" type="Button" parent="VBoxContainer1/Start Button"]
margin_left = 2.0
margin_top = 92.0
margin_right = 202.0
margin_bottom = 132.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 5 )
custom_styles/normal = SubResource( 2 )
toggle_mode = true
shortcut_in_tooltip = false
text = "Map"

[node name="Bye2" type="Button" parent="VBoxContainer1/Start Button"]
margin_left = -1.0
margin_top = 188.0
margin_right = 199.0
margin_bottom = 228.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 6 )
custom_styles/normal = SubResource( 3 )
toggle_mode = true
shortcut_in_tooltip = false
text = "Quit "

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="7Eaac6Bdd74453Be0B9D62199Fde2D6c" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 515, 302 )
rotation = 4.71239
scale = Vector2( 1.06924, 1.21903 )
texture = ExtResource( 2 )

[node name="C5B3200717E6A1015283235Df6A01F08" type="Sprite" parent="ParallaxBackground/ParallaxLayer/7Eaac6Bdd74453Be0B9D62199Fde2D6c"]
position = Vector2( 0.400643, -0.958756 )
rotation = 1.5708
scale = Vector2( 0.589048, 0.6928 )
texture = ExtResource( 3 )

[node name="Title" type="Sprite" parent="ParallaxBackground/ParallaxLayer/7Eaac6Bdd74453Be0B9D62199Fde2D6c/C5B3200717E6A1015283235Df6A01F08"]
position = Vector2( 68.9704, 2.87082 )
texture = ExtResource( 5 )

[node name="chime" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Background music" parent="." instance=ExtResource( 9 )]

[connection signal="mouse_entered" from="VBoxContainer1/Start Button" to="." method="_on_Start_Button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer1/Start Button" to="." method="_on_Start_Button_mouse_exited"]
[connection signal="pressed" from="VBoxContainer1/Start Button" to="." method="_on_Start_Button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer1/Start Button/Map" to="." method="_on_Map_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer1/Start Button/Map" to="." method="_on_Map_mouse_exited"]
[connection signal="pressed" from="VBoxContainer1/Start Button/Map" to="." method="_on_Map_pressed"]
[connection signal="mouse_entered" from="VBoxContainer1/Start Button/Bye2" to="." method="_on_Bye2_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer1/Start Button/Bye2" to="." method="_on_Bye2_mouse_exited"]
[connection signal="pressed" from="VBoxContainer1/Start Button/Bye2" to="." method="_on_Bye_pressed"]
